<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.nomixer.thinlet</groupId>
  <artifactId>thinlet-parent</artifactId>
  <version>0.2.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Thinlet (modernized) — parent</name>
  <description>
    Modernization fork of the 2002-2005 Thinlet GUI toolkit by Robert Bajzat.
    Parent POM: versioning and plugin management. Only thinlet-core publishes.
  </description>
  <url>https://github.com/nomixer/thinlet-modernized</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License, version 2.1</name>
      <url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <modules>
    <module>thinlet-core</module>
    <module>thinlet-demos</module>
    <module>thinlet-drafts</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!-- Build on a modern LTS JDK (21); emit Java 8 bytecode via the compiler
         "release" flag. See DECISIONS.md D5 for the deprecation hedge. -->
    <maven.compiler.release>8</maven.compiler.release>

    <!-- Plugin versions, pinned. -->
    <version.compiler.plugin>3.16.0</version.compiler.plugin>
    <version.surefire.plugin>3.6.0</version.surefire.plugin>
    <version.jar.plugin>3.5.1</version.jar.plugin>
    <version.deploy.plugin>3.1.4</version.deploy.plugin>
    <version.toolchains.plugin>3.3.0</version.toolchains.plugin>
    <version.spotless.plugin>3.10.1</version.spotless.plugin>
    <version.palantir.format>2.50.0</version.palantir.format>
    <version.checkstyle.plugin>3.6.0</version.checkstyle.plugin>
    <version.checkstyle.tool>14.1.0</version.checkstyle.tool>
    <version.spotbugs.plugin>4.10.4.0</version.spotbugs.plugin>
    <version.japicmp.plugin>0.26.1</version.japicmp.plugin>

    <!-- japicmp is INACTIVE during Phase 0; activated from v0.1.0 (Phase 1). -->
    <japicmp.skip>true</japicmp.skip>

    <!-- Test-only dependencies (Phase 1 trace harness). Test scope only; never
         enter the published thinlet-core jar (it stays runtime-dependency-free). -->
    <version.junit>5.14.4</version.junit>
    <version.assertj>3.27.7</version.assertj>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${version.junit}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${version.assertj}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <!-- Only thinlet-core actually deploys; demos/drafts set maven.deploy.skip. -->
    <repository>
      <id>github-nomixer</id>
      <name>GitHub Packages — nomixer/thinlet-modernized</name>
      <url>https://maven.pkg.github.com/nomixer/thinlet-modernized</url>
    </repository>
  </distributionManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${version.compiler.plugin}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${version.jar.plugin}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${version.deploy.plugin}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.surefire.plugin}</version>
        </plugin>

        <!-- Toolchains: surefire forks the tests on a real target JDK when the
             crossjdk profile is active (-Djdk.target=N) and a matching toolchain
             is configured (.mvn/toolchains.xml). The default build (Maven on JDK
             21) does not require it. See DECISIONS.md D30. -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-toolchains-plugin</artifactId>
          <version>${version.toolchains.plugin}</version>
        </plugin>

        <!-- japicmp: configured here, INACTIVE in Phase 0 (japicmp.skip=true). -->
        <plugin>
          <groupId>com.github.siom79.japicmp</groupId>
          <artifactId>japicmp-maven-plugin</artifactId>
          <version>${version.japicmp.plugin}</version>
          <configuration>
            <skip>${japicmp.skip}</skip>
            <parameter>
              <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
              <onlyModified>true</onlyModified>
            </parameter>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Code formatter: Spotless + palantir-java-format. spotless:check gates
           verify; spotless:apply rewrites in place. thinlet.dtd is NOT a Spotless
           target (the DTD stays byte-verbatim). -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${version.spotless.plugin}</version>
        <configuration>
          <!-- Line endings follow .gitattributes (eol=lf for text): Spotless
               normalizes CRLF/stray-CR to LF and fails check on regressions. -->
          <lineEndings>GIT_ATTRIBUTES</lineEndings>
          <java>
            <palantirJavaFormat>
              <version>${version.palantir.format}</version>
            </palantirJavaFormat>
            <removeUnusedImports/>
          </java>
          <formats>
            <!-- Gentle XML hygiene for project-authored XML only (POMs, config).
                 The 2005-origin XML corpus is EXCLUDED: it is behavior-relevant
                 test/demo input (preserved as vendored), and some files carry
                 legacy non-UTF-8 encodings. thinlet.dtd stays byte-verbatim.
                 See DECISIONS.md D12. -->
            <format>
              <includes>
                <include>**/*.xml</include>
              </includes>
              <excludes>
                <exclude>**/target/**</exclude>
                <!-- Maven local repo + wrapper distribution (CI points
                     MAVEN_USER_HOME at the workspace .m2): downloaded
                     artifacts, never linted. See DECISIONS.md D14. -->
                <exclude>.m2/**</exclude>
                <exclude>**/.m2/**</exclude>
                <exclude>**/*.dtd</exclude>
                <exclude>**/src/main/resources/**</exclude>
                <exclude>**/src/test/resources/**</exclude>
              </excludes>
              <trimTrailingWhitespace/>
              <endWithNewline/>
            </format>
            <!-- Doc website (HTML/CSS) + Markdown: enforce LF + a final newline,
                 and (since Spotless reads UTF-8) guard the docs' UTF-8 encoding.
                 The 2005 docs were converted to UTF-8 for this; see D18. Scope is
                 line-ending / newline / encoding only — no whitespace trimming or
                 markup restructuring of the historical pages. -->
            <format>
              <includes>
                <include>docs/**/*.html</include>
                <include>docs/**/*.css</include>
                <include>**/*.md</include>
              </includes>
              <excludes>
                <exclude>**/target/**</exclude>
                <exclude>.m2/**</exclude>
                <exclude>**/.m2/**</exclude>
              </excludes>
              <endWithNewline/>
            </format>
          </formats>
        </configuration>
        <executions>
          <execution>
            <id>spotless-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Style linter: Checkstyle (Google-derived, relaxed; see config). -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${version.checkstyle.plugin}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${version.checkstyle.tool}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>${maven.multiModuleProjectDirectory}/config/checkstyle/checkstyle.xml</configLocation>
          <suppressionsLocation>${maven.multiModuleProjectDirectory}/config/checkstyle/suppressions.xml</suppressionsLocation>
          <consoleOutput>true</consoleOutput>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <failOnViolation>true</failOnViolation>
          <violationSeverity>error</violationSeverity>
        </configuration>
        <executions>
          <execution>
            <id>checkstyle-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Bug-pattern linter: SpotBugs (bytecode-level). -->
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>${version.spotbugs.plugin}</version>
        <configuration>
          <excludeFilterFile>${maven.multiModuleProjectDirectory}/config/spotbugs/exclude.xml</excludeFilterFile>
          <effort>Max</effort>
          <threshold>Medium</threshold>
          <failOnError>true</failOnError>
        </configuration>
        <executions>
          <execution>
            <id>spotbugs-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Cross-JDK test matrix (DECISIONS.md D31, generalizes D14/D25).
         maven-toolchains-plugin selects the target JDK (-Djdk.target=N) so surefire
         forks the golden-trace tests on it; Maven itself stays on the base JDK (21)
         and compilation stays on the JVM-21 javac at the default release 8 (the
         one portable jar — not parameterized per row), so the build never invokes
         the target JDK's javac. Pass the toolchains with `-t .mvn/toolchains.xml`.
         Used by CI's matrix `test` job for runtimes 8/11/17 (JDK 21 = the base-JVM
         build job). -->
    <profile>
      <id>crossjdk</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-toolchains-plugin</artifactId>
            <executions>
              <execution>
                <id>select-target-jdk</id>
                <goals>
                  <goal>toolchain</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <toolchains>
                <jdk>
                  <version>${jdk.target}</version>
                </jdk>
              </toolchains>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
